# one2n_sre_bootcamp

./: .dockerignore  .env.example  .env.test.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  Vagrantfile  docker-compose.test.yml  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: argocd-image-update.yml  build.yml  ci.yml  update-helm-image.yml  update-openapi.yml
app/: __init__.py  config.py  errors.py  extensions.py  health.py  logging.py  models.py  routes.py
app/models/: student.py
app/repositories/: student_repository.py
app/schemas/: student.py
app/services/: student_service.py
argocd/: Makefile  README.md  bootstrap.yaml
argocd/apps/: external-secrets-application.yaml  kustomization.yaml  observability-application.yaml  project.yaml  repo-secret.example.yaml  stack-application.yaml  vault-application.yaml
argocd/install/: kustomization.yaml
helm/: Makefile  README.md
helm/external-secrets/: Chart.yaml  values.yaml
helm/observability/: Chart.yaml  Makefile  README.md  values.yaml
helm/stack/: Chart.yaml  values-image.yaml  values-local.yaml.example  values.yaml
helm/vault/: Chart.yaml  slack-webhook.local.example  values-demo.yaml  values-local.example.yaml  values.yaml
k8s/: .env.example  Makefile  README.md  application.yml  database.yml  external-secrets.yml  vault.yml
migrations/: README
scripts/: generate_openapi.py
tests/: test_schemas.py  test_services.py  test_students_api.py
vagrant/: .env.example  Makefile  README.md  docker-compose.yml  nginx.conf  provision.sh
(+33 files in other folders)
