[project]
name = "rest"
version = "0.1.0"
description = "Student CRUD REST API built with Flask"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apispec>=6.10.0",
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
exclude = ["migrations"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
